--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <head>
     <title>JavaScript Quiz</title>
+
     <link rel="stylesheet" href="css/styles.css">
+
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Test your knowledge with our fun and challenging general knowledge quiz! Explore a wide range of topics, from history and science to pop culture and geography. Challenge yourself and see how much you really know. Play now and discover new facts with our engaging quiz!">
 </head>
@@ -20,6 +23,6 @@
     <button id="nextBtn">Next Question</button>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 </body>
 </html>
